test_suite/tests/ui/fail_duplicate_bounds_params.rs
use scale_info::TypeInfo;
use core::marker::PhantomData;

#[derive(TypeInfo)]
#[scale_info(bounds(), bounds())]
struct A<T> {
    marker: PhantomData<T>,
}

fn main() {}